--- a/index.html
+++ b/index.html
@@ -1,38 +1,22 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <title>ChildBrowser Plugin Example</title>
-	<meta charset="utf-8">
-
-    <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
-    <script type="text/javascript" charset="utf-8" src="childbrowser.js"></script>
-    <script type="text/javascript">
-    var childbrowser;
-
-    function onBodyLoad() {
-      document.addEventListener("deviceready", onDeviceReady, false);
-    
-    }
-
-    function onDeviceReady() {
-      navigator.notification.alert("Cordova is working");
-    }
-
-    function onLinkClick() {
-        window.plugins.childBrowser.onLocationChange = function(loc){ alert("In index.html new loc = " + loc); };
-        window.plugins.childBrowser.onClose = function(){alert("In index.html child browser closed");};
-        window.plugins.childBrowser.onOpenExternal = function(){alert("In index.html onOpenExternal");};        
-
-        window.plugins.childBrowser.showWebPage('http://www.google.com',
-                                        { showLocationBar: true });
-        console.log(window.plugins.childBrowser);
-        
-    }
-    </script>
-  </head>
-  <body onload="onBodyLoad()">
-    <h1>Welcome to the ChildBrowser demo</h1>
-    <p><a href="#" onclick="onLinkClick()">Click here</a> to open a child browser window to Google</p>
-
-  </body>
+    <head>
+        <title>ChildBrowser</title>
+     <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.2.0.min.css">
+<script src="js/jquery-1.8.2.min.js"></script>
+<script src="js/jquery.mobile-1.2.0.min.js"></script>
+        <script>
+            $.getScript("phonegap.js",function(){
+$(".extlink").on("click",function(event)
+	{
+	event.preventDefault();
+	var winloc = $(this).attr('href');
+	var ref = window.open(winloc, '_system');
+	});
+});
+        </script>
+    </head>
+    <body>
+        <a href="https://www.google.com.ph/" class="extlink">Link</a>
+    </body>
 </html>
