--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
      <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.2.0.min.css">
 <script src="js/jquery-1.8.2.min.js"></script>
 <script src="js/jquery.mobile-1.2.0.min.js"></script>
+<script src="js/phonegap.js"></script>
         <script>
             $.getScript("phonegap.js",function(){
 $(".extlink").on("click",function(event)
